--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,3 +104,12 @@ a {
 .notice{
   margin:0;
 }
+
+.example::-webkit-scrollbar {
+ display: none;
+}
+
+.example {
+ -ms-overflow-style: none;  /* IE and Edge */
+ scrollbar-width: none;  /* Firefox */
+}
