--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-  <div class="home content">
+  <div class="home content exemple">
     <img src='<%= image_path 'home.png'%>' style="max-width:100vw"><hr>
     <h2 style="margin-top: -17px;">Welcome to</h2>
     <h1 style="margin-top: -15px;">Jobble</h1>
