ajout du create des offres plus button ext index de ses offres a finir et faire edit ext

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -33,6 +33,12 @@
   <h4>🔍</h4> <p>Voir mes matchs</p>  <p class="fas fa-chevron-right"></p>
   <% end %>
 
+  <div class="b-margin-20"></div>
+<%# ici %>
+   <%= link_to mes_offres_path, class: "dashboard-pill dash-jaune" do%>
+  <h4>🔍</h4> <p>Voir mes offres</p>  <p class="fas fa-chevron-right"></p>
+  <% end %>
+
   <div class="b-margin-40"></div>
 
 </div>
