--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,4 +1,9 @@
 <div class="offre-js">
+<% unless @selected_offers.count.positive? %>
+    <%= link_to new_offer_path, class: "dashboard-pill" do%>
+    <h4>💼</h4> <p>Crée une offre</p>  <p class="fas fa-chevron-right"></p>
+    <% end %>
+  <% end %>
 <%# ma classee pour cacher l'offre %>
 <% if @selected_offers.count.positive? %>
 
@@ -7,6 +12,12 @@
 <i class="fas fa-thumbs-down"></i>
 </div>
 
+<%# test loic %>
+
+  <%= link_to new_offer_path, class: "dashboard-pill" do%>
+  <h4>💼</h4> <p>Crée une offre</p>  <p class="fas fa-chevron-right"></p>
+  <% end %>
+<%#  zdddzdzdzdd %>
   <div>
     <% offer = @selected_offers.first %>
       <div>
