--- a/app/views/offers/new_offer.html.erb
+++ b/app/views/offers/new_offer.html.erb
@@ -1,18 +1,48 @@
-<h1>tetst</h1>
-<div class="content-offers">
+
+
+<div class="content-offers conteneur-form-offer">
 <%= simple_form_for @offer, url: create_offer_path do |f| %>
-<%= f.input :title, label: 'titre' %>
-<%= f.input :description %>
-<%= f.input :location %>
-<%= f.input :salary %>
-<%= f.input :number_hour %>
-<%= f.input :employement_type %>
-<%= f.input :contract_type %>
-<%= f.input :job_id, as: :check_boxes, collection: Job.all, wrapper: :vertical_collection_inline %>
-<%= f.input :company_name %>
-<%= f.input :photo, as: :file %>
-<%= f.submit %>
 
-
-<% end %>
+<div class="input-title">
+  <%= f.input :title, label: 'titre' %>
 </div>
+<%= params[:titletest] %>
+<div class="input-description">
+<%= f.input :description, as: :text, placeholder: 'entrer une description'%>
+</div>
+
+<div class="input-location">
+<%= f.input :location,  id: 'testo', label: 'ville de l offre', placeholder: "ville" %>
+</div>
+
+<div class="input-salary">
+<%= f.input :salary, label: 'Salaire' %>
+</div>
+
+<div class="input-number-hour">
+<%= f.input :number_hour, label: 'nombre d heures' %>
+</div>
+
+<div class="input-employement-type">
+<%= f.input :employement_type, label: 'Type du contrat' %>
+</div>
+
+<div class="input-contract-type">
+<%= f.input :contract_type, label: 'Status Juridique' %>
+</div>
+
+
+<%= f.association :job, collection: @jobs, input_html: { class: 'select2 deco-select2' }, label: 'Métier' %>
+
+<div class="input-company">
+<%= f.input :company_name, label: 'Nom de la boite ou compagnie' %>
+</div>
+
+<%= f.input :photo, as: :file, label: 'photos', placeholder: 'choisir image' %>
+<%= f.submit value: 'crée l offre' %>
+
+
+<%= console %>
+
+</div>
+<% end %>
