--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="content-long">
 
-    <div class="offer-content" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @offer.photo.key, height: 300, crop: :fill %>')">
+    <div class="offer-content" >
 
       <div>
 
