--- a/app/assets/stylesheets/components/decoselect2.scss
+++ b/app/assets/stylesheets/components/decoselect2.scss
@@ -1,81 +1,100 @@
 
- .input-title {
 
+textarea.form-control {
+border-color: $jaune;
+margin-top: 40px;
+}
+
+textarea.form-control:focus {
+  border-color: $jaune;
+  margin-top: 40px;
+}
+
+.form-control::placeholder {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+
+
+
+button {
   input {
-
-     color: #493ba5;
-     background-color: #493ba5;
-      border-color: transparent transparent $obsydian transparent;
-
+  color: $jaune;
+  background-color: $jaune;
+   border-radius: 8px;
   }
+}
+
+.label-form {
+  // color: $obsydian;
+  // font-weight: bold;
+  // font-family: Arial, Helvetica, sans-serif;
+  // font-size: 16px
+  display: none;
+}
+
+.submit-offer {
+  margin-top: 10px;
+  color: #493ba5 !important;
+  background-color: $jaune;
+  border-radius: 14px;
+  border-color: transparent transparent transparent transparent;
+  width: 50%;
+  height: 40px;
+  font-size: 14px;
+  font-weight: bold;
+
+}
+
+.submit-offer-container {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+
+// partie controle des formulaire
+.form-control {
+  background-color: #493ba5 !important;
+  border-color: transparent transparent $jaune transparent;
+  color: $jaune;
+  border-radius: 8px;
+}
+// couleur des text du placeholder
+.form-control::placeholder {
+  color: $jaune;
+}
+
+.form-control:focus {
+  background-color: #493ba5 !important;
+  color: $jaune;
+  border-color: transparent transparent $jaune transparent;
+  border-radius: 8px;
+}
+
+.form-check-label {
+  color: $obsydian;
+}
+// bouton ajouter image jaune
+ input[type="file"] {
+     background-color: $lavande;
+     color: $jaune;
+     border-radius: 12px;
+     margin-top: 33px;
+
  }
 
-  .input-location {
+ //placement de l'image violet bouton violet
 
-  input {
+ ::-webkit-file-upload-button {
+  background: $jaune;
+  color: $obsydian;
+  padding: 1;
+  border-color: transparent;
+}
 
-     color: #493ba5;
-     background-color: #493ba5;
-      border-color: transparent transparent $obsydian transparent;
-
-  }
- }
-
-   .input-salary {
-
-  input {
-
-     color: #493ba5;
-     background-color: #493ba5;
-      border-color: transparent transparent $obsydian transparent;
-
-  }
- }
-
-   .input-number-hour {
-
-  input {
-
-     color: #493ba5;
-     background-color: #493ba5;
-      border-color: transparent transparent $obsydian transparent;
-
-  }
- }
-
-    .input-employement-type {
-
-  input {
-
-     color: #493ba5;
-     background-color: #493ba5;
-      border-color: transparent transparent $obsydian transparent;
-
-  }
- }
-
-    .input-contract-type {
-
-  input {
-
-     color: #493ba5;
-     background-color: #493ba5;
-      border-color: transparent transparent $obsydian transparent;
-
-  }
- }
-
-     .input-company {
-
-  input {
-
-     color: #493ba5;
-     background-color: #493ba5;
-      border-color: transparent transparent $obsydian transparent;
-
-  }
- }
-
+////////////////////////////////////////
 
 
 // pour le select2 de creation offres
@@ -102,7 +121,7 @@
   .select2-container--material .select2-selection--single {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid $lavande;
+    border-bottom: 1px solid $jaune;
     border-radius: 0;
     box-shadow: none;
     box-sizing: content-box;
@@ -112,15 +131,17 @@
     padding: 8px 0 5px 0;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
     .select2-container--material .select2-selection--single .select2-selection__rendered {
-      color: $lavande;
-      line-height: 28px;
+      color: $jaune;
+      // line-height: 28px;
+      font-size: 12px;
       padding-left: 0; }
     .select2-container--material .select2-selection--single .select2-selection__clear {
       cursor: pointer;
       float: right;
       font-weight: bold; }
     .select2-container--material .select2-selection--single .select2-selection__placeholder {
-      color: $lavande; }
+      color: $jaune;
+    width: 100%;}
     .select2-container--material .select2-selection--single .select2-selection__arrow {
       height: 26px;
       margin: 0.6rem 0 0.4rem 0;
@@ -145,17 +166,18 @@
     left: 1px;
     right: auto; }
   .select2-container--material.select2-container--disabled .select2-selection--single {
-    background-color: $obsydian;
+    background-color: $jaune;
     cursor: default; }
     .select2-container--material.select2-container--disabled .select2-selection--single .select2-selection__clear {
       display: none; }
   .select2-container--material.select2-container--open .select2-selection--single .select2-selection__arrow b {
     border-color: transparent transparent #888 transparent;
-    border-width: 0 4px 5px 4px; }
+    border-width: 0 4px 5px 4px;
+  }
   .select2-container--material .select2-selection--multiple {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid $lavande;
+    border-bottom: 1px solid $jaune;
     border-radius: 0;
     box-shadow: none;
     box-sizing: content-box;
@@ -174,7 +196,7 @@
       .select2-container--material .select2-selection--multiple .select2-selection__rendered li {
         list-style: none; }
     .select2-container--material .select2-selection--multiple .select2-selection__placeholder {
-      color: $obsydian;
+      color: red;
       margin-top: 5px;
       float: left; }
     .select2-container--material .select2-selection--multiple .select2-selection__clear {
@@ -184,7 +206,7 @@
       margin-top: 5px;
       margin-right: 10px; }
     .select2-container--material .select2-selection--multiple .select2-selection__choice {
-      background-color: $obsydian;
+      background-color: $jaune;
       border-radius: 16px;
       color: $lavande;
       cursor: default;
@@ -209,7 +231,7 @@
     margin-left: 2px;
     margin-right: auto; }
   .select2-container--material.select2-container--disabled .select2-selection--multiple {
-    background-color: $lavande;
+    background-color: $jaune;
     cursor: default; }
   .select2-container--material.select2-container--disabled .select2-selection__choice__remove {
     display: none; }
@@ -227,12 +249,12 @@
     outline: 0; }
   .select2-container--material .select2-search--dropdown .select2-search__field {
     border: none;
-    border-bottom: 1px solid $lavande;
+    border-bottom: 1px solid $jaune;
     border-radius: 0;
     outline: none; }
     .select2-container--material .select2-search--dropdown .select2-search__field:focus:not([readonly]) {
-      box-shadow: 0 1px 0 0 $lavande;
-      border-bottom: 1px solid $lavande; }
+      box-shadow: 0 1px 0 0 $obsydian;
+      border-bottom: 1px solid $jaune; }
   .select2-container--material .select2-search--inline .select2-search__field {
     background: transparent;
     border: none !important;
@@ -245,9 +267,9 @@
   .select2-container--material .select2-results__option[role=group] {
     padding: 0; }
   .select2-container--material .select2-results__option[aria-disabled=true] {
-    color: $lavande; }
+    color: $jaune; }
   .select2-container--material .select2-results__option[aria-selected=true] {
-    background-color: $obsydian; }
+    background-color: $jaune; }
   .select2-container--material .select2-results__option .select2-results__option {
     padding-left: 1em; }
     .select2-container--material .select2-results__option .select2-results__option .select2-results__group {
@@ -268,8 +290,8 @@
               margin-left: -5em;
               padding-left: 6em; }
   .select2-container--material .select2-results__option--highlighted[aria-selected] {
-    background-color: $lavande;
-    color: $obsydian; }
+    background-color: $jaune;
+    color: $lavande; }
   .select2-container--material .select2-results__group {
     cursor: default;
     display: block;
@@ -278,7 +300,7 @@
 .select2-dropdown {
   background-color: $obsydian;
   border: 1px solid $obsydian;
-  border-radius: 4px;
+  border-radius: 10px;
   box-sizing: border-box;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   display: block;
@@ -327,3 +349,7 @@
       -webkit-appearance: none; }
   .select2-search--dropdown.select2-search--hide {
     display: none; }
+
+    .select2-selection__placeholder {
+      font-size: 12px;
+    }
