--- a/app/views/shared/_dashboardnavigationbar.html.erb
+++ b/app/views/shared/_dashboardnavigationbar.html.erb
@@ -1,6 +1,8 @@
 <div class="navigation-bar">
+<div class="button-dashboard-top-left">
 <%= link_to dashboard_path(current_user) do %>
 <div><span class="fas fa-chevron-left"></span><span>dashboard</span></div>
 <% end %>
+</div>
 <h6><%=pathname%></h6>
 </div>
