--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,7 +52,7 @@ $hadow-pill:  0 0 20px #00000030;
 // ℹ️ -- 🔠 -- Fonts Comportment -- 🔠 -- ℹ️ \\
 body{
   font-family: "-apple-system","BlinkMacSystemFont","Roboto" !important;
-  color: white !important;
+  color: $jaune !important;
   h1{
   font-size: 55px;
   font-weight: 700;
